tests/neg/i2564.scala
object Foo {
  rewrite def bar = new Bar // error
  class Bar private[Foo]()
}
